--- a/css/style.css
+++ b/css/style.css
@@ -529,24 +529,37 @@ main {
 
 .effect-level {
   position: absolute;
-  bottom: 10px;
+  bottom: 9px;
   left: 50%;
 
+  padding: 7px 11px 0;
+
   width: 495px;
-  height: 33px;
+  height: 34px;
 
   font-size: 12px;
-  line-height: 42px;
   text-align: center;
   color: #ffffff;
   white-space: nowrap;
 
   background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 33px;
+  border-radius: 34px;
 
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+.effect-level .noUi-target {
+  border-radius: 16px;
+}
+
+.effect-level .noUi-connects {
+  border-radius: 13px;
+}
+
+.effect-level .noUi-connect {
+  background: #ffe753;
 }
 
 .effect-level__value {
@@ -683,28 +696,12 @@ main {
   border-radius: 5px;
 }
 
-.text__item {
-  margin: 0;
-  padding: 0;
-}
-
-.text__error {
-  display: block;
-
-  margin: -20px auto 0 auto;
-  padding: 0;
-
-  font-size: 8px;
-  color: rgb(245, 105, 105);
-}
-
 .text__description {
   width: 450px;
   height: 100px;
 
   margin: 0 auto;
   padding: 15px 10px;
-  margin-bottom: 20px;
 
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 400;
@@ -720,7 +717,6 @@ main {
 
 .img-upload__submit {
   padding: 10px 20px;
-  margin-top: -20px;
 
   color: #ffe753;
   text-align: center;
