--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,10 @@ main {
           transform: translateX(-50%);
 }
 
+.effect-level__slider {
+  display: none;
+}
+
 .effect-level .noUi-target {
   border-radius: 16px;
 }
@@ -696,11 +700,26 @@ main {
   border-radius: 5px;
 }
 
+.text__item {
+  margin: 0;
+  padding: 0;
+}
+
+.text__error {
+  display: block;
+
+  margin: -20px auto 0 auto;
+  padding: 0;
+
+  font-size: 8px;
+  color: rgb(245, 105, 105);
+}
+
 .text__description {
   width: 450px;
   height: 100px;
 
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
   padding: 15px 10px;
 
   font-family: "Open Sans", "Arial", sans-serif;
@@ -717,6 +736,7 @@ main {
 
 .img-upload__submit {
   padding: 10px 20px;
+  margin-top: -20px;
 
   color: #ffe753;
   text-align: center;
