--- a/css/style.css
+++ b/css/style.css
@@ -1226,7 +1226,8 @@ main {
  */
 
 .error,
-.success {
+.success,
+.load-error {
   position: fixed;
   display: flex;
   justify-content: center;
@@ -1242,7 +1243,8 @@ main {
 }
 
 .error__inner,
-.success__inner {
+.success__inner,
+.load-error__inner {
   position: relative;
   width: 600px;
   padding: 50px 20px;
@@ -1269,7 +1271,8 @@ main {
   padding-bottom: 75px;
 }
 
-.error__title {
+.error__title,
+.load-error__title {
   position: relative;
 
   margin: 0;
@@ -1303,7 +1306,8 @@ main {
 }
 
 .error__button,
-.success__button {
+.success__button,
+.load-error__button {
   padding: 5px 10px;
 
   color: #ffffff;
